testsuite/gnatprove/tests/ug__account2/test.out

account2.adb:15:26: error: volatile object in interfering context is not allowed in SPARK (SPARK RM 7.1.3(9)) [E0004]
   15 |         Num_Accounts := Num_Accounts + 1;
      |                         ^~~~~~~~~~~~
  launch "gnatprove --explain=E0004" for more information
  violation of aspect SPARK_Mode at line 2
    2 |  SPARK_Mode
      |  ^ here
gnatprove: error during flow analysis and proof
